实现访问者模式

--- a/test.ipynb
+++ b/test.ipynb
@@ -620,6 +620,114 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "source": [
+    "import eikon as ek\n",
+    "data = ek.get_timeseries('AAPL.O', fields='*', start_date='2021-8-3 16:00:00', end_date='2021-8-3 17:00:00', interval='tick')\n",
+    "# data.info()\n",
+    "# data.tail()\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "HTTP request failed: 'NoneType' object has no attribute 'http_request'\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "source": [
+    "class Node:\n",
+    "    pass\n",
+    "\n",
+    "class Number(Node):\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "\n",
+    "class UnaryOperator(Node):\n",
+    "    def __init__(self, operand):\n",
+    "        self.operand = operand\n",
+    "\n",
+    "class BinaryOperator(Node):\n",
+    "    def __init__(self, left, right):\n",
+    "        self.left = left\n",
+    "        self.right = right\n",
+    "\n",
+    "class Add(BinaryOperator):\n",
+    "    pass\n",
+    "\n",
+    "class NodeVisitor:\n",
+    "    def visit(self, node):\n",
+    "        methname = 'visit_'+ type(node).__name__\n",
+    "        meth = getattr(self, methname, None)\n",
+    "        if meth is None:\n",
+    "            meth = self.generic_visit\n",
+    "        return meth(node)\n",
+    "\n",
+    "    def generic_visit(self, node):\n",
+    "        raise RuntimeError('No {} method'.format('visit_' + type(node).__name__) )\n",
+    "\n",
+    "class Evaluator(NodeVisitor):\n",
+    "    def visit_Number(self, node):\n",
+    "        return node.value\n",
+    "    \n",
+    "    def visit_Add(self, node):\n",
+    "        return self.visit(node.left) + self.visit(node.right)\n",
+    "\n",
+    "    def visit_Sub(self, node):\n",
+    "        return self.visit(node.left) - self.visit(node.right)\n",
+    "\n",
+    "    def visit_Mul(self, node):\n",
+    "        return self.visit(node.left) * self.visit(node.right)\n",
+    "\n",
+    "    def visit_Div(self, node):\n",
+    "        return self.visit(node.left) / self.visit(node.right)\n",
+    "\n",
+    "\n",
+    "\n",
+    "class StackCode(NodeVisitor):\n",
+    "    def generate_code(self, node):\n",
+    "        self.instructions = []\n",
+    "        self.visit(node)\n",
+    "        return self.instructions\n",
+    "    \n",
+    "    def visit_Number(self, node):\n",
+    "        self.instructions.append(('PUSH', node.value))\n",
+    "\n",
+    "    def binop(self, node, instruction):\n",
+    "        self.visit(node.left)\n",
+    "        self.visit(node.right)\n",
+    "        self.instructions.append((isinstance,))\n",
+    "\n",
+    "\n",
+    "e = Evaluator()\n",
+    "\n",
+    "e.visit(Number(3))\n",
+    "# type(Number(3)).__name__\n",
+    "# type(Number(3))\n",
+    "# Number(3)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 32
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "source": [],
    "outputs": [],
