不使用递归实现访问者模式

--- a/test.ipynb
+++ b/test.ipynb
@@ -728,6 +728,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "source": [
+    "import types\n",
+    "class Node:\n",
+    "    pass\n",
+    "class NodeVisitor:\n",
+    "    def visit(self, node):\n",
+    "        stack = [node]\n",
+    "        last_result = None\n",
+    "        while stack:\n",
+    "            try:\n",
+    "                last = stack[-1]\n",
+    "                if isinstance(last, types.GeneratorType):\n",
+    "                    stack.append(last.send(last_result))\n",
+    "                    last_result = None\n",
+    "                elif isinstance(last, Node) :\n",
+    "                    stack.append(self._visit(stack.pop()))\n",
+    "                else:\n",
+    "                    last_resutlt = stack.pop()\n",
+    "\n",
+    "            except StopIteration :\n",
+    "                stack.pop()\n",
+    "        return last_resutlt\n",
+    "\n",
+    "def _visit(self, node):\n",
+    "    methname = 'visit_' + type(node).__name__\n",
+    "    meth = getattr(self, methname, None)\n",
+    "    if meth is None:\n",
+    "        meth = self.generic_visit\n",
+    "    return meth(node)\n",
+    "\n",
+    "def generic_visit(self, node):\n",
+    "    raise RuntimeError('No {} method'.format('visit_' + type(node).__name__) )\n",
+    "\n",
+    "\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "source": [],
    "outputs": [],
