--- a/test.ipynb
+++ b/test.ipynb
@@ -769,6 +769,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "source": [
+    "import logging\n",
+    "\n",
+    "a = logging.getLogger('foo')\n",
+    "b = logging.getLogger('bar')\n",
+    "a is b\n",
+    "\n",
+    "class Spam:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "    \n",
+    "import weakref\n",
+    "_spam_cache = weakref.WeakValueDictionary()\n",
+    "def get_spam(name):\n",
+    "    if name not in _spam_cache:\n",
+    "        s = Spam(name)\n",
+    "        _spam_cache[name] = s\n",
+    "    else:\n",
+    "        s = _spam_cache[name]\n",
+    "    return s"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "source": [
+    "# 解除一个装饰器\n",
+    "\n",
+    "from functools import wraps\n",
+    "\n",
+    "def decorator1(func):\n",
+    "    @wraps(func)\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        print('decorator 1')\n",
+    "        return func(*args, **kwargs)\n",
+    "    return wrapper\n",
+    "\n",
+    "def decorator2(func):\n",
+    "    @wraps(func)\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        print('decorator 2')\n",
+    "        return func(*args, **kwargs)\n",
+    "    return wrapper\n",
+    "\n",
+    "@decorator1\n",
+    "@decorator2\n",
+    "def add(x, y):\n",
+    "    return x + y\n",
+    "\n",
+    "# add(2,3)\n",
+    "\n",
+    "add.__wrapped__(2,3)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "decorator 2\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 46
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "source": [],
    "outputs": [],
