为类和静态方法提供装饰器

--- a/test.ipynb
+++ b/test.ipynb
@@ -823,7 +823,7 @@
     "\n",
     "# add(2,3)\n",
     "\n",
-    "add.__wrapped__(2,3)"
+    "add.__wrapped__(2,3)\n"
    ],
    "outputs": [
     {
@@ -842,6 +842,63 @@
      },
      "metadata": {},
      "execution_count": 46
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "source": [
+    "# 为类和静态方法提供装饰器\n",
+    "from functools import wraps\n",
+    "import time\n",
+    "\n",
+    "def timethis(func):\n",
+    "    @wraps(func)\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        start = time.time()\n",
+    "        r = func(*args, **kwargs)\n",
+    "        end = time.time()\n",
+    "        print(end-start)\n",
+    "        return r\n",
+    "    return wrapper\n",
+    "\n",
+    "\n",
+    "class Spam:\n",
+    "    @timethis\n",
+    "    def instance_method(self, n):\n",
+    "        print(self, n)\n",
+    "        while n > 0:\n",
+    "            n -= 1\n",
+    "\n",
+    "    @classmethod    \n",
+    "    @timethis\n",
+    "    def class_method(cls, n):\n",
+    "        print(cls, n)\n",
+    "        while n>0:\n",
+    "            n -= 1\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    @timethis\n",
+    "    def static_method(n):\n",
+    "        print(n)\n",
+    "        while n > 0:\n",
+    "            n -= 1\n",
+    "\n",
+    "s = Spam()\n",
+    "s.instance_method(1000)\n",
+    "# s.class_method(1000)\n",
+    "# s.static_method(1000)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<__main__.Spam object at 0x122c43e20> 1000\n",
+      "0.0007600784301757812\n"
+     ]
     }
    ],
    "metadata": {}
