装饰器为被包装函数增加参数

--- a/test.ipynb
+++ b/test.ipynb
@@ -905,6 +905,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "source": [
+    "# 装饰器为被包装函数增加参数\n",
+    "from functools import wraps\n",
+    "import inspect\n",
+    "\n",
+    "def optional_debug(func):\n",
+    "    if 'debug' in inspect.getargspec(func).args:\n",
+    "        raise TypeError('debug argument already defined')\n",
+    "    \n",
+    "    @wraps(func)\n",
+    "    def wrapper(*args, debug=False, **kwargs):\n",
+    "        if debug:\n",
+    "            print('calling', func.__name__)\n",
+    "        return func(*args, **kwargs)\n",
+    "\n",
+    "    sig = inspect.signature(func)\n",
+    "    parms = list(sig.parameters.values())\n",
+    "    parms.append(inspect.Parameter('debug', inspect.Parameter.KEYWORD_ONLY, default=False))\n",
+    "    wrapper.__signature__ = sig.replace(parameters=parms)\n",
+    "    return wrapper\n",
+    "\n",
+    "@optional_debug\n",
+    "def add(x,y):\n",
+    "    return x+y\n",
+    "\n",
+    "print(inspect.signature(add))\n",
+    "\n",
+    "add(2,3)\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(x, y, *, debug=False)\n"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "/var/folders/sn/qlsq40gd3ggbr4kvwqsblj000000gn/T/ipykernel_21352/125505269.py:6: DeprecationWarning: inspect.getargspec() is deprecated since Python 3.0, use inspect.signature() or inspect.getfullargspec()\n",
+      "  if 'debug' in inspect.getargspec(func).args:\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 60
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "source": [],
    "outputs": [],
