--- a/test.ipynb
+++ b/test.ipynb
@@ -966,17 +966,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 8,
+   "source": [
+    "# 在类上强制使用编程规约\n",
+    "from inspect import signature\n",
+    "import logging\n",
+    "\n",
+    "class MatchSignaturesMeta(type):\n",
+    "    def __init__(self, clsname, bases, clsdict):\n",
+    "        super().__init__(clsname, bases, clsdict)\n",
+    "        sup = super(self, self)\n",
+    "        for name, value in clsdict.items():\n",
+    "            if name.startswith('_') or not callable(value):\n",
+    "                print(name, value)\n",
+    "                continue\n",
+    "            prev_dfn = getattr(sup, name, None)\n",
+    "            if prev_dfn:\n",
+    "                prev_sig = signature(prev_dfn)\n",
+    "                val_sig = signature(value)\n",
+    "                if prev_dfn !=val_sig:\n",
+    "                    logging.warning('signature mismatch in %s. %s != %s', value.__qualname__, prev_sig, val_sig)\n",
+    "\n",
+    "class Root(metaclass=MatchSignaturesMeta):\n",
+    "    pass\n",
+    "\n",
+    "class A(Root):\n",
+    "    def foo(self, x, y):\n",
+    "        pass\n",
+    "    def spam(self, x, *, z):\n",
+    "        pass\n",
+    "\n",
+    "class B(A):\n",
+    "    def foo(self, a, b):\n",
+    "        pass\n",
+    "    def spam(self, x, z):\n",
+    "        pass"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "WARNING:root:signature mismatch in B.foo. (self, x, y) != (self, a, b)\n",
+      "WARNING:root:signature mismatch in B.spam. (self, x, *, z) != (self, x, z)\n",
+      "__module__ __main__\n",
+      "__qualname__ Root\n",
+      "__module__ __main__\n",
+      "__qualname__ A\n",
+      "__module__ __main__\n",
+      "__qualname__ B\n"
+     ]
+    }
+   ],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.9.6",
+   "version": "3.8.3",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -987,8 +1043,8 @@
    "file_extension": ".py"
   },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.6 64-bit"
+   "name": "python383jvsc74a57bd0af4b785734fd1fd501a376f9608629171dcd26a01ab6b2420eceeb4d5487fee6",
+   "display_name": "Python 3.8.3 64-bit ('3.8.3': pyenv)"
   },
   "interpreter": {
    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
