--- a/test.ipynb
+++ b/test.ipynb
@@ -1022,6 +1022,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "bar2 : 2 3\nbar2 : hello 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Spam:\n",
+    "    def bar(self, x:int, y:int):\n",
+    "        print('bar1 :', x, y)\n",
+    "\n",
+    "    def bar(self, s:int, n:int=0):\n",
+    "        print('bar2 :', s, n)\n",
+    "\n",
+    "s = Spam()\n",
+    "s.bar(2,3)\n",
+    "s.bar('hello')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#利用函数注解实现方法重载\n",
+    "import inspect\n",
+    "import types\n",
+    "\n",
+    "class MultiMethod:\n",
+    "\n",
+    "    def __init__(self, name):\n",
+    "        self._methods = {}\n",
+    "        self.__name__ = name\n",
+    "    \n",
+    "    def register(self, meth):\n",
+    "       sig = inspect.signature(meth) \n",
+    "\n",
+    "       types = []\n",
+    "       for name, parm in sig.parameters.items():\n",
+    "           if name == 'self':\n",
+    "                continue\n",
+    "           if parm.annotation is inspect.Parameter.empty:\n",
+    "                raise TypeError('Argument {} must be annotated with a type'.format(name))\n",
+    "           if not isinstance(parm.annotation, type):\n",
+    "                raise TypeError(\n",
+    "                    'Argument {} annotation must be a type'.format(name)\n",
+    "                )\n",
+    "           if parm.default is not inspect.Parameter.empty:\n",
+    "                self._methods[tuple(types)] = meth\n",
+    "           types.append(parm.annotation)\n",
+    "\n",
+    "       self._methods[tuple(types)] = meth\n",
+    "def __call__(self, *args):\n",
+    "    types = tuple(type(arg) for arg in args[1:])\n",
+    "    meth = self._methods.get(types, None)\n",
+    "    if meth :\n",
+    "        return meth(*args)\n",
+    "    else:\n",
+    "        raise TypeError('No matching method for types {}'.format(types))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
