--- a/test.ipynb
+++ b/test.ipynb
@@ -1093,21 +1093,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "name must be a <class 'str'>",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-27-14b3265c3f4f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPerson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m90\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m234\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mage\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-27-14b3265c3f4f>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, name, age)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mage\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-27-14b3265c3f4f>\u001b[0m in \u001b[0;36mprop\u001b[0;34m(self, value)\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mprop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpected_type\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'{} must be a {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpected_type\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m         \u001b[0msetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstroage_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mprop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: name must be a <class 'str'>"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'kkk'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 29
     }
    ],
    "source": [
@@ -1138,7 +1135,142 @@
     "\n",
     "a = Person('kkk', 234)\n",
     "\n",
-    "# a.name"
+    "a.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "  4     >>    0 LOAD_FAST                0 (n)\n              2 LOAD_CONST               1 (0)\n              4 COMPARE_OP               4 (>)\n              6 POP_JUMP_IF_FALSE       28\n\n  5           8 LOAD_GLOBAL              0 (print)\n             10 LOAD_CONST               2 ('T-minus')\n             12 LOAD_FAST                0 (n)\n             14 CALL_FUNCTION            2\n             16 POP_TOP\n\n  6          18 LOAD_FAST                0 (n)\n             20 LOAD_CONST               3 (1)\n             22 INPLACE_SUBTRACT\n             24 STORE_FAST               0 (n)\n             26 JUMP_ABSOLUTE            0\n\n  7     >>   28 LOAD_GLOBAL              0 (print)\n             30 LOAD_CONST               4 ('Blastoff!')\n             32 CALL_FUNCTION            1\n             34 POP_TOP\n             36 LOAD_CONST               0 (None)\n             38 RETURN_VALUE\n"
+     ]
+    }
+   ],
+   "source": [
+    "import dis \n",
+    "\n",
+    "def countdown(n):\n",
+    "    while n>0:\n",
+    "        print('T-minus', n)\n",
+    "        n -= 1\n",
+    "    print('Blastoff!')\n",
+    "        \n",
+    "dis.dis(countdown)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<module 'time' (built-in)>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 32
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import imp\n",
+    "import pkgutil\n",
+    "data = pkgutil.get_data(__package__, 'xxx.dat')\n",
+    "\n",
+    "imp.reload(time)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1629789592.500841"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 35
+    }
+   ],
+   "source": [
+    "import importlib\n",
+    "time = importlib.import_module(\"time\")\n",
+    "time.time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "b'{\\n  \"args\": {\\n    \"name1\": \"value1\", \\n    \"name2\": \"value2\"\\n  }, \\n  \"headers\": {\\n    \"Accept-Encoding\": \"identity\", \\n    \"Host\": \"httpbin.org\", \\n    \"User-Agent\": \"Python-urllib/3.8\", \\n    \"X-Amzn-Trace-Id\": \"Root=1-6125a734-227a1a7825fa050b12f0a04c\"\\n  }, \\n  \"origin\": \"104.245.14.31\", \\n  \"url\": \"http://httpbin.org/get?name1=value1&name2=value2\"\\n}\\n'\n"
+     ]
+    }
+   ],
+   "source": [
+    "from urllib import request, parse\n",
+    "url = 'http://httpbin.org/get'\n",
+    "parms = {\n",
+    "   'name1' : 'value1',\n",
+    "   'name2' : 'value2'\n",
+    "}\n",
+    "\n",
+    "querystring = parse.urlencode(parms)\n",
+    "\n",
+    "# Make a GET request and read the response\n",
+    "u = request.urlopen(url+'?' + querystring)\n",
+    "resp = u.read()\n",
+    "print(resp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "b'{\\n  \"args\": {}, \\n  \"data\": \"\", \\n  \"files\": {}, \\n  \"form\": {\\n    \"name1\": \"value1\", \\n    \"name2\": \"value2\"\\n  }, \\n  \"headers\": {\\n    \"Accept-Encoding\": \"identity\", \\n    \"Content-Length\": \"25\", \\n    \"Content-Type\": \"application/x-www-form-urlencoded\", \\n    \"Host\": \"httpbin.org\", \\n    \"User-Agent\": \"Python-urllib/3.8\", \\n    \"X-Amzn-Trace-Id\": \"Root=1-6125aa06-78837e4e063278a945c4753c\"\\n  }, \\n  \"json\": null, \\n  \"origin\": \"104.245.14.31\", \\n  \"url\": \"http://httpbin.org/post\"\\n}\\n'\n"
+     ]
+    }
+   ],
+   "source": [
+    "from urllib import request, parse\n",
+    "\n",
+    "# Base URL being accessed\n",
+    "url = 'http://httpbin.org/post'\n",
+    "\n",
+    "# Dictionary of query parameters (if any)\n",
+    "parms = {\n",
+    "   'name1' : 'value1',\n",
+    "   'name2' : 'value2'\n",
+    "}\n",
+    "\n",
+    "# Encode the query string\n",
+    "querystring = parse.urlencode(parms)\n",
+    "\n",
+    "# Make a POST request and read the response\n",
+    "u = request.urlopen(url, querystring.encode('ascii'))\n",
+    "resp = u.read()\n",
+    "print(resp)"
    ]
   },
   {
