--- a/test.ipynb
+++ b/test.ipynb
@@ -1386,12 +1386,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "第0 个 234\n第1 个 234\n第2 个 234\n第3 个 234\n第4 个 234\n第5 个 234\n第6 个 234\n第7 个 234\n第8 个 234\n第9 个 234\n第 1 个demo\n第 2 个demo\n第 3 个demo\n第 4 个demo\n第 5 个demo\n第 6 个demo\n第 7 个demo\n第 8 个demo\n第 9 个demo\n第 10 个demo\n**********\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 一个简单的线程demo\n",
+    "from threading import Thread\n",
+    "\n",
+    "def work1(id):\n",
+    "    for i in range(10):\n",
+    "        print(f'第{i} 个 {id}')\n",
+    "\n",
+    "def work2():\n",
+    "    for i in range(10):\n",
+    "        print(f'第 {i+1} 个demo')\n",
+    "\n",
+    "t1 = Thread(target=work1, args=(234,), name='test1')\n",
+    "t2 = Thread(target=work2, name='test2')\n",
+    "\n",
+    "t1.start()\n",
+    "t2.start()\n",
+    "\n",
+    "t1.join()\n",
+    "t2.join()\n",
+    "\n",
+    "print(\"*\"*10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
