--- a/test.ipynb
+++ b/test.ipynb
@@ -1423,6 +1423,200 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "T-minus 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 启动与停止线程\n",
+    "class CountdownTask:\n",
+    "    def __init__(self):\n",
+    "        self._running = True\n",
+    "\n",
+    "    def terminate(self):\n",
+    "        self._running = False\n",
+    "\n",
+    "    def run(self, n):\n",
+    "        while self._running and n > 0:\n",
+    "            print('T-minus', n)\n",
+    "            n -= 1\n",
+    "            time.sleep(5)\n",
+    "\n",
+    "\n",
+    "import multiprocessing\n",
+    "from threading import Thread\n",
+    "c = CountdownTask()\n",
+    "t = Thread(target=c.run, args=(10,))\n",
+    "# 使用后台线程\n",
+    "# t = Thread(target=countdown, args=(10,), daemon=True)\n",
+    "t.start()\n",
+    "c.terminate() # Signal termination\n",
+    "t.join()      # Wait for actual termination (if needed)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Launching countdown\n",
+      "countdown starting\n",
+      "T-minus 10\n",
+      "countdown is running\n",
+      "T-minus 9\n",
+      "T-minus 8\n",
+      "T-minus 7\n",
+      "T-minus 6\n",
+      "T-minus 5\n",
+      "T-minus 4\n",
+      "T-minus 3\n",
+      "T-minus 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from threading import Thread, Event\n",
+    "import time\n",
+    "\n",
+    "# Code to execute in an independent thread\n",
+    "def countdown(n, started_evt):\n",
+    "    print('countdown starting')\n",
+    "    started_evt.set()\n",
+    "    while n > 0:\n",
+    "        print('T-minus', n)\n",
+    "        n -= 1\n",
+    "        time.sleep(5)\n",
+    "\n",
+    "# Create the event object that will be used to signal startup\n",
+    "# event 来协调线程   event 对象最好单次使用\n",
+    "started_evt = Event()\n",
+    "\n",
+    "# Launch the thread and pass the startup event\n",
+    "print('Launching countdown')\n",
+    "t = Thread(target=countdown, args=(10,started_evt))\n",
+    "t.start()\n",
+    "\n",
+    "# Wait for the thread to start\n",
+    "started_evt.wait()\n",
+    "print('countdown is running')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "__init__() takes 1 positional argument but 2 were given",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-82-87a1bfc4bb2a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmultiprocessing\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCountdownTask\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmultiprocessing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mProcess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() takes 1 positional argument but 2 were given"
+     ]
+    }
+   ],
+   "source": [
+    "# 通过继承 Thread 类来实现的线程：\n",
+    "from threading import Thread\n",
+    "\n",
+    "class CountdownThread(Thread):\n",
+    "    def __init__(self, n):\n",
+    "        super().__init__()\n",
+    "        self.n = n\n",
+    "    \n",
+    "    def run(self):\n",
+    "        while self.n > 0:\n",
+    "            print('T-minus', self.n)\n",
+    "            self.n -= 1\n",
+    "            time.sleep(5)\n",
+    "\n",
+    "# c = CountdownThread(5)\n",
+    "# c.start()\n",
+    "\n",
+    "import multiprocessing\n",
+    "c = CountdownTask(5)\n",
+    "p = multiprocessing.Process(target=c.run)\n",
+    "p.start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 线程间通信\n",
+    "from queue import Queue\n",
+    "from threading import Thread\n",
+    "import heapq\n",
+    "\n",
+    "class PriorityQueue:\n",
+    "    def __init__(self):\n",
+    "        self._queue = []\n",
+    "        self._count = 0\n",
+    "        self._cv = threading.Condition()\n",
+    "    def put(self, item, priority):\n",
+    "        with self._cv:\n",
+    "            heapq.heappush(self._queue, (-priority, self._count, item))\n",
+    "            self._count += 1\n",
+    "            self._cv.notify()\n",
+    "\n",
+    "    def get(self):\n",
+    "        with self._cv:\n",
+    "            while len(self._queue) == 0:\n",
+    "                self._cv.wait()\n",
+    "            return heapq.heappop(self._queue)[-1]\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 给关键部分加锁\n",
+    "import threading\n",
+    "\n",
+    "class SharedCounter:\n",
+    "    def __init__(self, initial_value = 0):\n",
+    "        self._value = initial_value\n",
+    "        self._value_lock = threading.Lock()\n",
+    "\n",
+    "\n",
+    "    def incr(self, delta=1):\n",
+    "       with self._value_lock:\n",
+    "           self._value += delta\n",
+    "\n",
+    "    def decr(self, delta=1):\n",
+    "        # with为了自动解锁，建立互斥\n",
+    "        with self._value_lock:\n",
+    "            self._value -= delta \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
